week-06/seminar/envoy-outlier-detection/envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 15000

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: http
                route_config:
                  name: default
                  virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: kittens
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: kittens
      connect_timeout: 10s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      outlier_detection:
        consecutive_5xx: 2
        interval: "5s"
        base_ejection_time: "10s"
        max_ejection_percent: 100
      load_assignment:
        cluster_name: kittens
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: server1
                      port_value: 5001
              - endpoint:
                  address:
                    socket_address:
                      address: server2
                      port_value: 5002

cluster_manager: {}
